PracticeTasks/module_2/code/balancer/config/deployment-spec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: go-server-deployment
  name: go-server-deployment
  namespace: tech-tornadoes-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-server-deployment
  template:
    metadata:
      labels:
        app: go-server-deployment
    spec:
      containers:
        - name: go-server
          image: daniilmikulik/asd-project:latest # Replace with your actual image
          ports:
            - containerPort: 8080
          # Optionally, specify resource limits and requests
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"
