PracticeTasks/module_2/code/balancer/config/pod-spec.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-server-pod
  namespace: tech-tornadoes-project
  labels:
    app: go-server
spec:
  containers:
    - name: go-server
      image: daniilmikulik/asd-project:latest # Replace with your actual image
      ports:
        - containerPort: 80
      # Optionally, specify resource limits and requests
      resources:
        limits:
          memory: "256Mi"
          cpu: "200m"
        requests:
          memory: "128Mi"
          cpu: "100m"
