PracticeTasks/module_2/code/balancer/config/ingress-spec.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-ss
  namespace: tech-tornadoes-project
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ss
  namespace: tech-tornadoes-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /tech-tornadoes-project/go-ss/
            pathType: Prefix
            backend:
              service:
                name: go-server
                port:
                  number: 8080
